--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body { 
-	background-image: url("../images/background.jpg");
+	background-image: url(../images/background1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+	background-attachment:scroll;
+	background-position: center;
 } 
 
 
