updates to values

--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,12 @@ body {
 	     font-family: 'DM Sans', sans-serif;
 	     text-align: center; 
          background: #A57F63}
+
+.my-container {font-size: 12px; 
+
+              font-family: 'DM Sans', sans-serif; 
+
+              text-align: center;
+} 
+
+ 
