--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 	         text-shadow: 2px 2px 2px #A57F63;
 	         text-align: center; 
 	         vertical-align: top;
-	         color: black   
+	         color: black  
 }
 
 .wrapper {
@@ -36,9 +36,22 @@ body {
 	   
 }
 
-.my-container {font-size: 14px; 
-              font-family: 'DM Sans', sans-serif;
-	      
+.my-container {font-size: 12px; 
+              font-family: 'DM Sans', sans-serif; 
+              text-align: center;
+	          padding: 15px;
+	         	      
 } 
+
+.col {background: pink;
+      margin: 10px;
+	  width: 200px;
+	  align-content: center;
+}
+
+#h1 { font-size: 30px; 
+      font-family: 'DM Sans', sans-serif;
+      text-color: pink;      
+}
 
  
