--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ body {
 .footer {font-size: 12px;
 	     font-family: 'DM Sans', sans-serif;
 	     text-align: center; 
-         background: #A57F63
+         background: #A57F63;
+	     
        
 	   
 	   
