--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,16 @@
 body { 
 
-	height: 100%;
-    margin: 0;
+	
 	
 } 
 
-.homepage { background-image: url("/BeyondPure/images/background.png");
+.homepage { background-image: url("/BeyondPure/images/Background2.png");
     background-repeat: no-repeat;
     background-size: cover;
 	background-attachment:scroll;
 	background-position: center;
-    height: 100%;
-    margin: 0;
+    height: inherit;
+    margin: 0px;
 }
 
 
