--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,21 @@ body {
     background-size: cover;
 	background-attachment:scroll;
 	background-position: bottom ;
-	background-position: top 50px;
+	background-position: top;
     height: inherit;
 	margin: 0px;
 	} 
 
+.visionpage {background-image: url("../images/bgvision.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+	background-attachment:scroll;
+	background-position: bottom ;
+	background-position: top;
+    height: inherit;
+	margin: 0px;
+
+}
 
 
 
@@ -45,12 +55,17 @@ body {
 .footer {font-size: 12px;
 	     font-family: 'DM Sans', sans-serif;
 	     text-align: center; 
-         background: #A57F63;
-	     
-       
-	   
-	   
+         background: #A57F63;  
 }
+
+.visiontext { font-size: 20px;
+	         font-family: 'DM Sans', sans-serif,;
+	         text-shadow: 2px 2px 2px white;
+	         text-align: center; 
+	         vertical-align: top;
+	         color: black; 
+             padding-left: 320px;
+             padding-right: 320px;}
 
 .my-container {font-size: 12px; 
               font-family: 'DM Sans', sans-serif; 
