--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .valuepage { 
-	background-image: url("../images/bgvalues.jpg");
+	background-image: url("../images/bgvalues.png");
     background-repeat: no-repeat;
     background-size: cover;
 	background-attachment:scroll;
