--- a/css/style.css
+++ b/css/style.css
@@ -163,11 +163,21 @@ body {
       color:  white; 
 	  text-align: center;
 	  font-family: 'Barlow', sans-serif; }
+#col-4 { font-size: 30px;
+      color:  white; 
+	  text-align: center;
+	  font-family: 'Barlow', sans-serif; }
 
-#col5 { font-size: 12px;
+
+.col5 { font-size: 12px;
       color: white; 
 	  text-align: center;
 	  font-family: 'Barlow', sans-serif;}
+#col5 { font-size: 12px;
+      color: white; 
+	  text-align: right;
+	  font-family: 'Barlow', sans-serif;}
+
 
 #scenario { font-size: 15px;}
 
@@ -187,14 +197,7 @@ body {
 	background-position: center;
 } 
 
-.col { height: 200px;
-        width: 200px; }
-.col { height: 200px;
-        width: 200px; }
-.col { height: 200px;
-        width: 200px; }
-.col { height: 200px;
-        width: 200px; }
+
 
 #socials {font-size: 25px; 
       font-family: 'Barlow', sans-serif;
