--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,17 @@ body {
 	             color: black  
 }
 
-.one {font-size: 50px;
+.col-sm9 { text-align: center;}
+
+.one {font-size: 60px;
       color: black; 
 	  text-align: center;
 	  font-family: 'Barlow', sans-serif;
+      color:  #6B4D30 ; 
+	  text-align: center;
+       }
 	 }
-.lead { font-size: 18px; 
+.lead { font-size: 30px; 
       font-family: 'Barlow', sans-serif;
       color: black;  
 	  text-align: center;
@@ -85,9 +90,9 @@ body {
 
 .my-card-body {
   text-align: center;
-  border: 1px solid #6B4D30;
+  border: 1px solid #A57F63;
   width: 200px;
-  background-color:#6B4D30;
+  background-color:#A57F63;
   height: 150px;
   align-content: center;
  margin: 0 auto; 
@@ -100,9 +105,10 @@ body {
 } 
 
 .my-card-img-top {
-  border: 1px solid #6B4D30;
+  border: 1px solid #A57F63;
   width: 200px;
  text-align: center;
+	background-color: #A57F63;
 	
 }
 
@@ -127,6 +133,11 @@ body {
     height: inherit;
 	margin: 0px;}
 
+#profile { 
+	      box-shadow: 5px 5px 5px white;
+	      
+}
+
 .justificationpage
 
 #justificationtxt {font-size: 50px;
@@ -144,13 +155,17 @@ body {
 	          
 }
 
+.card-text { color: white;
+              font-family: 'Barlow', sans-serif;
+}
+
 .containerdiagram { width: 300px;
          margin: 0 auto; 
         float: none; 
         margin-bottom: 10px;
 }
 
-.jumbotron2  { background-color:#6B4D30; }
+.jumbotron2  { background-color:#A57F63; }
 
 .jumbotron-3 { margin: 0px 10px 0px 10px;
                font-size: 12px; 
@@ -229,7 +244,7 @@ body {
               text-align: right;
 	          vertical-align: middle;
 	          color: white;
-	          background-color: #6B4D30;
+	          background-color: #A57F63;
 	         
 }
 
@@ -251,12 +266,12 @@ body {
       color: black;  
 	  text-align: center; }
 
-.container3 { background-color: #6B4D30;
+.container3 { background-color: #A57F63;
               
 }
 
 .card-body {text-align: center;
-            background-color: #6B4D30;
+            background-color: #A57F63;
 	        font-family: 'Barlow', sans-serif;
 	        font-size: 12px;
 	        width: 300px;
