--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ body {
 	          
 }
 
-.col-img {text-align: left;}
+.col-img {text-align: center;}
 
 .containerdiagram { text-align: center;}
 
