--- a/css/style.css
+++ b/css/style.css
@@ -360,4 +360,10 @@ body {
 	  text-shadow: 2px 2px 5px grey;
 }
 
+@media only screen and (max-width: 600px) {
+  div.example {
+    display: none;
+  }
+}
+
  
